package at.school.smartstudyplanner.model;

/**
 * Beschreibt die Priorität einer Lernaufgabe.
 * Eine Aufgabe kann niedrig, mittel oder hoch priorisiert sein.
 */
public enum Priority {

    /**
     * Niedrige Priorität.
     */
    LOW,

    /**
     * Mittlere Priorität.
     */
    MEDIUM,

    /**
     * Hohe Priorität.
     */
    HIGH
}