package at.school.smartstudyplanner.model;

/**
 * Beschreibt den Bearbeitungsstatus einer Lernaufgabe.
 */
public enum TaskStatus {

    /**
     * Die Aufgabe ist noch offen.
     */
    OPEN,

    /**
     * Die Aufgabe wurde erledigt.
     */
    DONE
}